Added icons for gas and fixed indents

--- a/space-game.html
+++ b/space-game.html
@@ -13,7 +13,7 @@ var width = 1920;
 var height = 1080;
 var color = dark;
 var outerColor = darker;
-var assets = ["background.png", "rocket.png", "planet1.png", "planet2.png", "planet3.png", "planet4.png", "planet5.png", "planet6.png", "planet7.png", "planet8.png", "planet9.png", "planet10.png", "gas.jpg"];
+var assets = ["background.png", "rocket.png", "planet1.png", "planet2.png", "planet3.png", "planet4.png", "planet5.png", "planet6.png", "planet7.png", "planet8.png", "planet9.png", "planet10.png", "gas.png", "energy1.png", "energy2.png", "energy3.png"];
 var path = "assets/";
 
 var frame = new Frame(scaling, width, height, color, outerColor, assets, path, new Waiter());
@@ -25,8 +25,7 @@ frame.on("ready", function() {
     // BACKGROUND
     var background = frame.asset("background.png").addTo(stage);
 
-    // PLANETS
-    var space = new Container(stageW, stageH).addTo(stage);
+    // POSITION AND ANIMATION VARIABLES
     var minTimeAcross = 10000;
     var maxTimeAcross = 20000;
     var minSpin = 2000;
@@ -34,6 +33,9 @@ frame.on("ready", function() {
     var minTimeMake = 500;
     var maxTimeMake = 3000;
     var offset = 300;
+
+    // PLANETS
+    var space = new Container(stageW, stageH).addTo(stage);
     var spins = {"planet1.png":false, "planet2.png":true, "planet3.png":false, "planet4.png":true, "planet5.png":true, "planet6.png":true, "planet7.png":true, "planet8.png":true, "planet9.png":true, "planet10.png":true}
 
     makePlanet();
@@ -91,50 +93,39 @@ frame.on("ready", function() {
 
     }
 
+    // GAS
     var energy = new Container().addTo();
-    var collectGas = frame.asset("gas.jpg")
+    var collectGas = frame.asset("gas.png")
 
     makeGas();
     function makeGas() {
 
-        // make a container to hold the PNGs
         var gas = new Container();
 
-        // randomize which gas appears
-        // var rand = zim.rand(1, 10);
-        // var collectGas = frame.asset("gas"+rand+".jpg")
-         var collectGas = frame.asset("gas.jpg")
-           .clone()
-           .addTo(gas);
+        var rand = zim.rand(1, 3);
+        var collectGas = frame.asset("energy"+rand+".png")
+            .clone()
+            .addTo(gas);
 
-       // centerReg so it spins nicely and add it to space
         gas.centerReg(energy);
-        zog("hello");
-        // Below, we position and animate the planet
-        // start randomly off the stage on one side and go to a random spot on the other side
-        // offset is how far off the stage to start
-        // the pos array holds arrangements for all four sides
+
         var pos = [
-           [zim.rand(stageW), -offset, zim.rand(stageW), stageH+offset],
-           [zim.rand(stageW), stageH+offset, zim.rand(stageW), -offset],
-           [-offset, zim.rand(stageH), stageW+offset, zim.rand(stageH)],
-           [stageW+offset, zim.rand(stageH), -offset, zim.rand(stageH)]
+            [zim.rand(stageW), -offset, zim.rand(stageW), stageH+offset],
+            [zim.rand(stageW), stageH+offset, zim.rand(stageW), -offset],
+            [-offset, zim.rand(stageH), stageW+offset, zim.rand(stageH)],
+            [stageW+offset, zim.rand(stageH), -offset, zim.rand(stageH)]
         ];
+
         var posData = shuffle(pos)[0];
 
-        // animate the planets across the screen
         gas.animate({
-           set:{x:posData[0], y:posData[1]}, // start position
-           obj:{x:posData[2], y:posData[3]}, // end position
+           set:{x:posData[0], y:posData[1]},
+           obj:{x:posData[2], y:posData[3]},
            time:zim.rand(minTimeAcross, maxTimeAcross),
            ease:"linear",
-           call:function(gas){ // call gets sent the object the animation is on
-                // gas.removeFrom(); // remove the gas when the animation ends
-           }
+           call:function(gas){}
         });
 
-        // also rotate the gas
-        // set override to false so it does not remove the last animation
         if (spins["gas"+rand+".jpg"]){
            gas.animate({
                 obj:{rotation:360},
@@ -145,7 +136,6 @@ frame.on("ready", function() {
            });
         }
 
-        // call makeGas after a random timeout
         timeoutID = timeout(zim.rand(minTimeMake, maxTimeMake), makeGas);
 
     }
@@ -159,55 +149,22 @@ frame.on("ready", function() {
         axis:"both"
     });
 
-
     // LOOPING THROUGH EACH PLANET
-
-    Ticker.add(function(){
-         loop(space, function(planet) {
-              if(player.hitTestBounds(planet)){
+    Ticker.add(function() {
+        loop(space, function(planet) {
+            if(player.hitTestBounds(planet)) {
                 score.text = Number(score.text) - 1;
-
             }
-         })
-         loop(energy, function(gas) {
-
-              if(player.hitTestBounds(gas)){
-               score.text = Number(score.text) + 1;
+        })
+        loop(energy, function(gas) {
+            if(player.hitTestBounds(gas)) {
+                score.text = Number(score.text) + 1;
             }
-         })
+        })
     });
 
-
-
-    // // HIT TEST
-    // // written out in english
-    // Ticker.add(function () {
-    //     space.loop(function () {
-    //         if (rocket hits planet) {
-    //             reduce score
-    //         } else if (rocket collects gas) {
-    //             increase score
-    //             stage.update();
-    //         }
-    //     })
-    // })
-
-    // HIT TEST EXAMPLE
-    // var circles = new Container().addTo();
-    // loop(20, function(){
-    //     var circle = new Circle(20, green).loc(rand(stageW), rand(stageH), circles);
-    //     circle.collected = false;
-    // });
-    //
-    // var collector = new Rectangle(50, 100).center().drag();
-    // collector.on("pressmove", function() {
-    //     circles.loop(function(circle) {
-    //         if (!circle.collected && collector.hitTestCircle(circle)) {
-    //             circle.collected = true;
-    //             score.text = Number(score.text) + 1;
-    //         }
-    //     });
-    // });
+    // SCORE
+    
 
     stage.update();
 
