Added comment for assets

--- a/space-game.html
+++ b/space-game.html
@@ -171,7 +171,6 @@ frame.on("ready", function() {
         font:"Space Mono",
         color:"red"
     });
-
     label.pos(1400, 100);
 
     stage.update();
@@ -183,6 +182,7 @@ frame.on("ready", function() {
 </head>
 
 <body>
-<!-- canvas with id="myCanvas" is made by zim Frame -->
+<!-- canvas with id="myCanvas" is made by zim frame -->
+<!-- all assets from <a href="http://www.freepik.com">freepik</a> -->
 </body>
 </html>
