--- a/space-game.html
+++ b/space-game.html
@@ -169,9 +169,11 @@ frame.on("ready", function() {
         text:"SCORE",
         size:80,
         font:"Space Mono",
-        color:"red"
+        color:"black",
+        backgroundColor:"red",
+        padding:25
     });
-    label.pos(1400, 100);
+    label.pos(1400, 50);
 
     stage.update();
 
